# next-cache

./: Cargo.toml  README.md  benchmark_config.json  config.json
src/: cache_handler.rs  configurator.rs  main.rs  request_handler.rs  request_parser.rs
src/benchmark/: benchmark_configuration.rs  benchmark_result.rs  benchmark_runner.rs  mod.rs
