[package]
name = "next-cache-engine"
version = "0.1.0"
authors = ["Robin <robin.kooyman.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.14"} 
futures-executor = {version = "0.3.14" , features = ["thread-pool"]  }
dashmap = "4.0.2"
serde = { version = "1.0.125" , features = ["derive"] }
serde_json = "1.0.48"
byteorder = "1"
clap = "2.33.3"
rand = "0.8.3"
stopwatch = "0.0.7"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]